vector serialize and deserialize

--- a/UserMode-Rootkit/UserMode-Rootkit/UserMode-Rootkit.vcxproj
+++ b/UserMode-Rootkit/UserMode-Rootkit/UserMode-Rootkit.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="UserMode-Rootkit.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="IPCObjects.h" />
     <ClInclude Include="multiDLLInjector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
