--- a/UserMode-Rootkit/UserMode-Rootkit/UserMode-Rootkit.vcxproj.filters
+++ b/UserMode-Rootkit/UserMode-Rootkit/UserMode-Rootkit.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="multiDLLInjector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IPCObjects.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
