UserMode-Rootkit Deprecated Repalced by UserModeR00tkit

--- a/UserMode-Rootkit/UserMode-Rootkit/UserMode-Rootkit.vcxproj.filters
+++ b/UserMode-Rootkit/UserMode-Rootkit/UserMode-Rootkit.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="IPCObjects.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="newProcessMonitor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
